--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
+    "bulma": "^0.8.0",
+    "node-sass": "^4.13.0",
+    "normalize.css": "^8.0.1",
     "react": "^16.12.0",
     "react-csv": "^1.1.2",
     "react-dom": "^16.12.0",
@@ -16,7 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "css-build": "node-sass --omit-source-map-url src/index.scss src/index.css",
+    "css-watch": "npm run css-build -- --watch",
+    "css-start": "npm run css-watch"
   },
   "eslintConfig": {
     "extends": "react-app"
